# vorbis-compression

./: .gitignore  CMakeLists.txt
src/: main.c
src/audio-io/: audio-io.c  audio-io.h
src/common/: common.h
src/decoding/: decoding.h
src/encoding/: encoding.c  encoding.h  options.h
src/gui/: gui.c  gui.h  log-view.c  log-view.h
src/logging/: logging.c  logging.h
src/ogg-stream/: ogg-stream.c  ogg-stream.h
